# duck-detector-native

./: .gitignore  README.md  build.gradle  gradle.properties  gradlew  gradlew.bat  settings.gradle  todo.md
.github/workflows/: android-build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  filesystem_detector.cpp  heap_detector.cpp  jni_bridge.cpp  kernel_detector.cpp  mount_detector.cpp  native_detector.cpp  native_detector.h  preload_detector.cpp  selinux_detector.cpp  zygisk_detector.cpp
app/src/main/java/com/studio/duckdetector/: MainActivity.kt
app/src/main/java/com/studio/duckdetector/detector/: DetectionManager.kt  NativeDetector.kt
app/src/main/res/drawable/: ic_duck_logo.xml  ic_error.xml  ic_home.xml  ic_refresh.xml  ic_settings.xml  ic_warning.xml
app/src/main/res/layout/: activity_main.xml  item_detection_result.xml
app/src/main/res/menu/: bottom_navigation_menu.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml  themes.xml
